Refactor GitHub Pages deployment configuration by removing unused parameters from artifact upload step

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -23,11 +23,6 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: .          theme: jekyll-theme-cayman
-          markdown: kramdown
-          exclude:
-            - .github/
-          title: Vibe Coding Docs
-          description: Documentação aprimorada do projeto Vibe Coding
+          path: .
       - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v4
